--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   }
-} 
+}
