--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "validator": "^13.15.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
@@ -22,6 +23,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/validator": "^13.15.1",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
