--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7",
-    "phosphor-react": "^1.4.1",
+    "@phosphor-icons/react": "^2.1.10",
+    "motion": "^12.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
@@ -18,17 +18,17 @@
     "validator": "^13.15.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.7",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^22.15.30",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/validator": "^13.15.1",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.2",
-    "vite": "^6.3.5"
+    "vite": "^4.4.5"
   }
 }
