--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@phosphor-icons/react": "^2.1.10",
+    "framer-motion": "^12.16.0",
     "motion": "^12.16.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.1",
     "sass": "^1.63.6",
     "validator": "^13.15.0"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.15.30",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
