--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7",
+    "framer-motion": "^12.16.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.1",
     "sass": "^1.63.6",
     "validator": "^13.15.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -27,7 +27,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
+    "tailwindcss": "^3.4.15",
     "typescript": "^5.0.2",
     "vite": "^6.3.5"
   }
